[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.3.1"
pandas = "^2.2.3"
werkzeug = "^3.0.6"
flask = "^3.0.3"
numpy = "^2.1.2"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"